tests/baselines/reference/templateStringInNewExpressionES6.errors.txt
templateStringInNewExpressionES6.ts(1,5): error TS2351: This expression is not constructable.
  Type '"abc0abc"' has no construct signatures.


==== templateStringInNewExpressionES6.ts (1 errors) ====
    new `abc${0}abc`(`hello ${0} world`, `   `, `1${2}3`);
        ~~~~~~~~~~~~
!!! error TS2351: This expression is not constructable.
!!! error TS2351:   Type '"abc0abc"' has no construct signatures.